# lisanima

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: 01_requirements.md  02_architecture.md  03_mcp_interface.md  03_schema.md  04_mcp-tools.md  04_schema.md  05_migration.md  05_schema_migration.md  06_oauth.md  06_security.md  07_oauth.md  08_logging.md  09_transaction.md  10_class_diagram.md  11_sequence_diagram.md  12_testing.md  13_crud_matrix.md  31_deployment.md  32_operation.md  33_audit.md  40_embedding_setup.md  51_rulebook_migration.md
migrations/: 002_oauth.sql  003_messages_emotion_unpack.sql  003_runbook.md  004_messages_compacted_from.sql
scripts/: audit.sh
sql/: cre_func_migration_get_drop_order.sql  cre_idx_core.sql  cre_idx_oauth.sql  cre_idx_topic.sql  cre_proc_migration_evacuate.sql  cre_proc_migration_transfer.sql  cre_tbl_m_oauth_client.sql  cre_tbl_m_role.sql  cre_tbl_m_rulebook_protocol_detail.sql  cre_tbl_m_rulebooks.sql  cre_tbl_t_message_roles.sql  cre_tbl_t_message_tags.sql  cre_tbl_t_message_topics.sql  cre_tbl_t_messages.sql  cre_tbl_t_oauth_access_token.sql  cre_tbl_t_oauth_auth_code.sql  cre_tbl_t_oauth_auth_session.sql  cre_tbl_t_oauth_refresh_token.sql  cre_tbl_t_rulebooks.sql  cre_tbl_t_session_topics.sql  cre_tbl_t_sessions.sql  cre_tbl_t_tags.sql  cre_tbl_t_topic_roles.sql  cre_tbl_t_topics.sql  cre_viw_v_active_rulebooks.sql  init.sql  ins_tbl_m_rulebooks.sql
src/lisanima/: __init__.py  db.py  (+1 more)
utils/: __init__.py  rulebook_codec.py  sql_executor.py
(+23 files in other folders)
