[project]
name = "lisanima"
version = "0.1.0"
description = "リサの魂を永続化するMCPサーバー"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "psycopg[binary,pool]>=3.2",
    "python-dotenv>=1.0",
]

[project.scripts]
lisanima = "lisanima.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lisanima"]
